cmake_minimum_required(VERSION 3.9)

include(compile_options.cmake)

project(Cult)

add_subdirectory(googletest)
add_subdirectory(test)
add_subdirectory(game)
add_subdirectory(g3log)
add_subdirectory(glfw)
add_subdirectory(glm)

message("COMPILING CULT")
ADD_EXECUTABLE(Cult main.cpp)
TARGET_LINK_LIBRARIES(Cult PRIVATE g3logger LIB_ENGINE)
TARGET_COMPILE_FEATURES(Cult PUBLIC cxx_std_14)

compile_options(Cult)

message("END COMPILING CULT")

SET(ADD_FATAL_EXAMPLE OFF CACHE INTERNAL "")
SET(ADD_G3LOG_PERFORMANCE OFF CACHE INTERNAL "")
SET(ADD_G3LOG_UNIT_TEST OFF CACHE INTERNAL "")
SET(BUILD_GMOCK ON CACHE INTERNAL "")
SET(BUILD_GTEST OFF CACHE INTERNAL "")
SET(BUILD_SHARED_LIBS OFF INTERNAL "")
SET(GLFW_BUILD_DOCS OFF CACHE INTERNAL "")
SET(GLFW_BUILD_EXAMPLES OFF CACHE INTERNAL "")
SET(GLFW_BUILD_TESTS OFF CACHE INTERNAL "")
SET(GLFW_INSTALL OFF CACHE INTERNAL "")
SET(INSTALL_GMOCK OFF CACHE INTERNAL "")
SET(INSTALL_GTEST OFF CACHE INTERNAL "")
SET(G3_SHARED_LIB OFF CACHE INTERNAL "")
SET(CHANGE_G3LOG_DEBUG_TO_DBUG OFF CACHE INTERNAL "")
SET(ENABLE_FATAL_SIGNALHANDLING ON CACHE INTERNAL "")
SET(G3_IOS_LIB OFF CACHE INTERNAL "")
SET(G3_LOG_FULL_FILENAME OFF CACHE INTERNAL "")
SET(USE_DYNAMIC_LOGGING_LEVELS OFF CACHE INTERNAL "")
SET(USE_G3_DYNAMIC_MAX_MESSAGE_SIZE OFF CACHE INTERNAL "")
SET(gmock_build_tests OFF CACHE INTERNAL "")
SET(gtest_build_samples OFF CACHE INTERNAL "")
SET(gtest_build_tests OFF CACHE INTERNAL "")
SET(gtest_disable_pthreads OFF CACHE INTERNAL "")
SET(gtest_hide_internal_symbols OFF CACHE INTERNAL "")
SET(gtest_force_shared_crt OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_CXX_11 OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_CXX_14 OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_CXX_17 OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_CXX_20 OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_CXX_98 OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_FAST_MATH OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_LANG_EXTENSION OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_SMIN_AVX OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_SMIN_AVX2 OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_SMIN_SSE2 OFF CACHE INTERNAL "")
SET(GLM_TEST_ENABLE_SMIN_SSE3 OFF CACHE INTERNAL "")
SET(GLM_TEST_FORCE_PURE OFF CACHE INTERNAL "")
