message("COMPILING ENGINE")
ADD_LIBRARY(LIB_ENGINE STATIC)
TARGET_LINK_LIBRARIES(LIB_ENGINE PRIVATE glfw g3logger PUBLIC LIB_UTILS glm)
TARGET_INCLUDE_DIRECTORIES(LIB_ENGINE PRIVATE src/ PUBLIC include/)
TARGET_COMPILE_FEATURES(LIB_ENGINE PUBLIC cxx_std_14)
TARGET_SOURCES(LIB_ENGINE PRIVATE src/Engine.cpp)
TARGET_SOURCES(LIB_ENGINE PRIVATE src/Window.cpp)
TARGET_SOURCES(LIB_ENGINE PRIVATE src/Engine_Internal.cpp)
TARGET_SOURCES(LIB_ENGINE PRIVATE src/Renderer.cpp)
TARGET_SOURCES(LIB_ENGINE PRIVATE src/Transform3D.cpp)

compile_options(LIB_ENGINE)

message("END COMPILING ENGINE")
