message("COMPILING UTILS")
ADD_LIBRARY(LIB_UTILS STATIC)
TARGET_LINK_LIBRARIES(LIB_UTILS PRIVATE g3logger)
TARGET_INCLUDE_DIRECTORIES(LIB_UTILS PRIVATE src PUBLIC include)
TARGET_COMPILE_FEATURES(LIB_UTILS PUBLIC cxx_std_14)
TARGET_SOURCES(LIB_UTILS PRIVATE src/ConsumerThread.cpp)

compile_options(LIB_UTILS)

message("END COMPILING UTILS")
